bin_PROGRAMS = iyelld

iyelld_SOURCES =		\
		cmd.c		\
		conf.c		\
		conf_ini.c	\
		conf_lua.c	\
		ctcp.c		\
		info.c		\
		init.c		\
		hash.c		\
		hash+.c		\
		hooks.c		\
		hup.c		\
		irc.c		\
		log.c		\
		main.c		\
		misc.c		\
		../missing/asprintf.c	\
		../missing/event.c	\
		../missing/strsep.c	\
		network.c	\
		openssl.c	\
		rfc3164.c	\
		sched.c		\
		signal.c	\
		stats.c		\
		tools.c

iyelld_CPPFLAGS = -D_XOPEN_SOURCE=600
